--- a/phaserGame.html
+++ b/phaserGame.html
@@ -47,7 +47,7 @@
     {
         this.add.image(400, 300, 'sky');
 
-        let platforms = this.physics.add.staticGroup();
+        platforms = this.physics.add.staticGroup();
 
         platforms.create(400, 568, 'ground').setScale(2).refreshBody();
 
@@ -55,7 +55,7 @@
         platforms.create(50, 250, 'ground');
         platforms.create(750, 220, 'ground');
 
-        let player = this.physics.add.sprite(100, 450, 'dude');
+        player = this.physics.add.sprite(100, 450, 'dude');
 
         player.setBounce(0.2);
         player.setCollideWorldBounds(true);
@@ -80,10 +80,29 @@
             repeat: -1
         });
 
+        this.physics.add.collider(player, platforms);
+        cursors = this.input.keyboard.createCursorKeys();
+
     }
 
     function update ()
     {
+        if (cursors.left.isDown) {
+            player.setVelocityX(-160);
+            player.anims.play('left', true);
+        }
+        else if (cursors.right.isDown){
+            player.setVelocityX(160);
+            player.anims.play('right', true);
+        }
+        else{
+            player.setVelocityX(0);
+            player.anims.play('turn');
+        }
+
+        if (cursors.up.isDown && player.body.touching.down){
+            player.setVelocityY(-330);
+        }
     }
 
 </script>
