Adds score functionality

--- a/phaserGame.html
+++ b/phaserGame.html
@@ -33,6 +33,8 @@
     };
 
     var game = new Phaser.Game(config);
+    var score = 0;
+    var scoreText;
 
     function preload ()
     {
@@ -96,6 +98,9 @@
         this.physics.add.collider(stars, platforms);
         this.physics.add.overlap(player, stars, collectStar, null, this);
 
+        scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+
+
     }
 
     function update ()
@@ -121,6 +126,9 @@
     function collectStar (player, star)
     {
         star.disableBody(true, true);
+
+        score += 10;
+        scoreText.setText('Score: ' + score);
     }
 
 </script>
